test/src/e2e_vm_tests/test_programs/should_pass/test_abis/abi_impl_method_shadows_interface_method/src/main.sw
contract;

abi MyAbi
{
    fn method() -> u64;
}
{
    // impl methods cannot shadow interface methods
    fn method() -> u64 { 42 }
}
