test/src/e2e_vm_tests/test_programs/should_fail/recover_mismatched_delims/src/main.sw
contract;

fn bar() -> bool {
    0 // recovery witness
) // Lexer recovery here.
